--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ div {
 		background-size: contain;
 		min-width: 348px;
 		/*-webkit-box-shadow: 0px 0px 7px 1px #737373;*/
-		display:table
+		transition: 1s linear;
 	}
 
 	
