--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ div {
 
 .ct-card {
 	height: 70%;
-	background-image: url(img/ganaste.png);
+	background-image: url(img/GUADA_perdiste.png);
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -50,7 +50,7 @@ div {
 	.ct-card {
 		height: 90%;
 		margin-top: auto;
-		background-image: url(img/ganaste.png);
+		background-image: url(img/GUADA_perdiste.png);
 		background-position: center;
 		background-repeat: no-repeat;
 		background-size: contain;
